# mrw

./: .gitignore  .robots.py.kate-swp  .robots_var.py.kate-swp  NOTE  README.md  SOARNOTES  example.soar  gitty  input_robot  kucha.soar  lattice.soar  notes  output_robot  robots.py  robots.soar  robots_tmp.py  soar_robots.py  start  test_model.soar  test_soar.py  try.py
Notes/: notes  notes_soar  notes_soarmanual  test_soar.py
training_ws1/src/test_robot_description/launch/: test_urdf.launch
training_ws1/src/test_robot_description/rviz/: test_robot.rviz
training_ws1/src/test_robot_description/urdf/: test_robot.urdf
training_ws2/src/test_robot_description/rviz/: test_robot.rviz
training_ws2/src/test_robot_description/urdf/: test_robot.urdf.xacro
training_ws3/src/custom_global_planner/: CMakeLists.txt  custom_global_planner.xml  package.xml  setup.py
training_ws3/src/custom_global_planner/src/: custom_global_planner.cpp
training_ws3/src/odom_gazebo_republisher/: CMakeLists.txt  package.xml
training_ws3/src/test_robot_config/: CMakeLists.txt
training_ws3/src/test_robot_config/config/: control.yaml  map.yaml
training_ws3/src/test_robot_config/launch/: single_robot.launch  test_robot_gazebo.launch
training_ws3/src/test_robot_config/rviz/: test_robot.rviz
training_ws3/src/test_robot_control/: CMakeLists.txt  package.xml
training_ws3/src/test_robot_control/scripts/: form.soar  move_node.py  project_soar_gazebo.py  robots.soar
training_ws3/src/test_robot_description/urdf/: test_robot.urdf.xacro
(+7 files in other folders)
