<?xml version="1.0"?>
<package format='2'>
  <name>test_robot_control</name>
  <version>0.0.0</version>
  <description>Control program for test robot</description>

  <maintainer email="petr.sorokoumov@gmail.com">Petr Sorokoumov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <export>
  </export>
</package>
